--- a/pages/css/facilities.css
+++ b/pages/css/facilities.css
@@ -156,7 +156,7 @@ i {
 	padding-top: 200px;
 	width: 100%;
 	height: 50vh;
-	background-image: url(/assets/breakpoint-blur-dark.webp);
+	background-image: url("../../assets/breakpoint-blur-dark.webp");
 	background-attachment: fixed;
 	background-size: cover;
 	background-position: center;
@@ -236,7 +236,7 @@ i {
 }
 
 .bottom {
-	background-image: url(/assets/bg-pattern.webp);
+	background-image: url("../../assets/bg-pattern.webp");
 	background-color: #4b4a4a;
 	background-position: center;
 	background-size: cover
